# Game-Stream-Recommender-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README 2.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: ingestion_dag.py  serving_refresh_dag.py  training_dag.py
benchmarks/: latency.json  latency.md  latency_low_concurrency.json  loadtest.py  results.json  results.md  results_ucsd.json  results_ucsd.md
demo/: streamlit_app.py
docs/adr/: 0001-delta-lake-over-parquet.md  0002-hybrid-ranker-not-single-model.md  0003-temporal-split-not-random.md  0004-pgvector-not-separate-vector-db.md  0005-cold-start-cascade-not-404.md  0006-laptop-runnable-benchmark-path.md  0007-ucsd-dataset-and-two-tower.md  README.md
infra/docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.spark
infra/postgres/: init.sql
recommendation_engine/: docker_commands.md
scripts/: download_dataset.sh  download_ucsd_dataset.sh  run_benchmark.py  run_benchmark_ucsd.py  run_loadtest.py
src/gamereco/: __init__.py
src/gamereco/common/: config.py  logging.py  paths.py  schemas.py
src/gamereco/datasets/: __init__.py  steam200k.py  steam_ucsd.py
src/gamereco/etl/: __init__.py  bronze.py  cli.py  gold.py  session.py  silver.py  splits.py
src/gamereco/ingestion/: __init__.py  cli.py  discovery.py  jsonl_sink.py  pipeline.py  steam_client.py
src/gamereco/serving/: __init__.py  api.py  cache.py  cache_warmer.py  coldstart.py  db.py  embedding_index.py  observability.py  store.py
src/gamereco/training/: __init__.py  als.py  als_inmem.py  baselines.py  cli.py  clustering.py  ensemble.py  evaluation.py  hybrid.py  metrics.py  mlflow_utils.py  ncf.py  two_tower.py
tests/: conftest.py
tests/unit/: test_als_inmem.py  test_api.py  test_baselines.py  test_cache.py  test_coldstart.py  test_config.py  test_ensemble.py  test_evaluation.py  test_hybrid.py  test_jsonl_sink.py  test_logging.py  test_metrics.py  test_ncf.py  test_observability.py  test_paths.py  test_pipeline.py  test_schemas.py  test_splits.py  test_steam200k.py  test_steam_client.py  test_steam_ucsd.py  test_two_tower.py
web_crawler/: game_detail.py  web_crawler.py
web_ui/: app.py
web_ui/static/: main.css
web_ui/templates/: index.html  user.html
