[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-reco"
version = "0.2.0"
description = "Large-Scale Game Recommendation Engine — hybrid ALS + NCF + KMeans + XGBoost over Steam interactions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dev Desai" }]
license = { text = "MIT" }
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "pyarrow>=15.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
    "torch>=2.2.0",
    "mlflow>=2.13.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",
    "tenacity>=8.3.0",
    "redis>=5.0.4",
    "psycopg[binary,pool]>=3.1.18",
    "sqlalchemy>=2.0.30",
    "pgvector>=0.2.5",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "black>=24.4.0",
    "mypy>=1.10.0",
]
airflow = [
    "apache-airflow==2.9.1",
    "apache-airflow-providers-postgres>=5.10.0",
]

[project.scripts]
gamereco-ingest = "gamereco.ingestion.cli:main"
gamereco-etl = "gamereco.etl.cli:main"
gamereco-train = "gamereco.training.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gamereco" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "spark: tests that require a SparkSession",
    "integration: integration tests requiring docker services",
]

[tool.coverage.run]
branch = true
source = ["src/gamereco"]
# Spark / MLflow / pgvector heavy modules are covered by the integration
# stack under tests/integration and the docker-compose smoke tests, not the
# unit suite — keep them out of the unit-test coverage gate.
omit = [
    "src/gamereco/**/__main__.py",
    "src/gamereco/**/cli.py",
    "src/gamereco/etl/bronze.py",
    "src/gamereco/etl/silver.py",
    "src/gamereco/etl/gold.py",
    "src/gamereco/etl/session.py",
    "src/gamereco/training/als.py",
    "src/gamereco/training/clustering.py",
    "src/gamereco/training/mlflow_utils.py",
    "src/gamereco/serving/embedding_index.py",
    "src/gamereco/serving/cache_warmer.py",
    "src/gamereco/serving/store.py",
    "src/gamereco/ingestion/discovery.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
